--- a/.local_mogodb/docker-compose.yml
+++ b/.local_mogodb/docker-compose.yml
@@ -1,48 +1,76 @@
+# https://github.com/mongo-express/mongo-express/issues/579#issuecomment-3784132331
 services:
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
-    hostname: mongodb
-    volumes:
-      - mongodb-data:/data/db/
-      - mongodb-log:/var/log/mongodb/
+  mongodb-service:
+    image: mongodb/mongodb-atlas-local:latest
+    container_name: mongodb-container
+    restart: always
     env_file:
       - .env
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
     ports:
-      - '27017:27017'
+      - 27018:27017
+    volumes:
+      - mongodb-data:/data/db
+      - mongodb-config:/data/configdb
+    healthcheck:
+      test:
+        [
+          'CMD-SHELL',
+          'mongosh -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} --eval ''db.adminCommand("ping")''',
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 40s
+    environment:
+      MONGODB_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGODB_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1024M
+        reservations:
+          cpus: '0.5'
+          memory: 512M
     networks:
-      - mongodb_network
+      canal-deploy-network:
+        aliases:
+          - mongo
 
-  mongo-express:
+  mongodb-express:
     image: mongo-express:latest
-    container_name: mongo-express
+    container_name: mongodb-express-container
     restart: always
+    env_file:
+      - .env
+    ports:
+      - 8082:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      ME_CONFIG_MONGODB_PORT: 27017
-      ME_CONFIG_MONGODB_SERVER: 'mongodb'
-      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_EXPRESS_USERNAME}
-      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_EXPRESS_PASSWORD}
-    ports:
-      - 8081:8081
-    networks:
-      - mongodb_network
+      ME_CONFIG_MONGODB_SERVER: mongodb-container
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb-container:27017/
+      ME_CONFIG_BASICAUTH: false
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 128M
+        reservations:
+          cpus: '0.10'
+          memory: 64M
     depends_on:
-      - mongodb
+      mongodb-service:
+        condition: service_healthy
+    networks:
+      - canal-deploy-network
+
+networks:
+  canal-deploy-network:
+    driver: bridge
 
 volumes:
   mongodb-data:
     driver: local
-    name: mongo-data
-  mongodb-log:
+  mongodb-config:
     driver: local
-    name: mongo-log
-
-networks:
-  mongodb_network:
-    driver: bridge
-    name: mongo-network
