--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gen-referentiel-core",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "scripts": {
     "doc": "cd docs && retype start",
@@ -30,6 +30,7 @@
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "dotenv": "^17.2.3",
     "eslint": "^8.41.0",
     "eslint-config-next": "^14.2.35",
     "eslint-plugin-mdx": "^3.6.2",
