docs: met à jour la documentation complète et ajoute guide de synchronisation
- Ajoute docs/synchronisation.md avec workflow upstream complet
- Corrige retype.yml (URL et repo pointant vers gen-referentiel-core)
- Met à jour developpement.md :
  - Versions TinaCMS 2.10.1, Next.js 14.2.35, MongoDB 7.0.0
  - Commande lint:md corrigée
  - Section Changesets ajoutée
- Complète installation.md avec NEXT_PUBLIC_REF_NAME et détails MongoDB
- Met à jour configuration.md avec REIPRO, RIA et REF_HOME
- Finalise README.md avec stack technique complète

--- a/docs/retype.yml
+++ b/docs/retype.yml
@@ -1,6 +1,6 @@
 input: .
 favicon: static/greenit_icone_intro-alt.png
-url: https://cnumr.github.io/lighthouse-plugin-ecoindex
+url: https://cnumr.github.io/gen-referentiel-core
 branding:
   title: GenRefs
   logo: static/greenit_icone_intro-alt.png
@@ -24,7 +24,7 @@ footer:
       target: blank
       icon: organization
 edit:
-  repo: 'https://github.com/cnumr/best-practices-wordpress' # The URL to source files for this project
+  repo: 'https://github.com/cnumr/gen-referentiel-core' # The URL to source files for this project
   base: './docs' # Optional base path to a directory within repo
   branch: 'main' # Point to a custom branch within the repo
   label: 'Modifier sur GitHub' # A custom label for the generated link
