--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # pagefind (generated at build time)
 /public/pagefind/
 
+# api data (generated at build time)
+/public/api-data/
+
 # production
 /build
 
