--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
   },
   "pnpm": {
     "overrides": {
-      "nanoid": "^3.3.8"
+      "nanoid": "^3.3.8",
+      "react-dnd-html5-backend": "^15.1.3"
     }
   }
 }
