--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
   "pnpm": {
     "overrides": {
       "nanoid": "^3.3.8",
+      "react-dnd": "^15.1.2",
       "react-dnd-html5-backend": "^15.1.3"
     }
   }
