--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "tinacms": "2.10.1",
-    "tinacms-authjs": "8.0.2",
+    "tinacms-authjs": "^5.0.9",
     "tinacms-gitprovider-github": "2.0.19",
     "typescript": "5.9.3",
     "upstash-redis-level": "1.1.1",
