--- a/package.json
+++ b/package.json
@@ -63,8 +63,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.26.0",
     "tailwind-merge": "2.5.5",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "tinacms": "2.10.1",
     "tinacms-authjs": "^5.0.9",
     "tinacms-gitprovider-github": "2.0.19",
@@ -92,7 +90,9 @@
   },
   "pnpm": {
     "overrides": {
-      "nanoid": "^3.3.8"
+      "nanoid": "^3.3.8",
+      "react-dnd": "14.0.5",
+      "react-dnd-html5-backend": "14.1.0"
     }
   }
 }
