--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "prettier . --write",
     "docker:up": "docker compose -f .local_mongodb/docker-compose.yml up -d",
     "docker:down": "docker compose -f .local_mongodb/docker-compose.yml down",
+    "sync-upstream": "./scripts/sync-upstream.sh",
     "clean": "rm -rf .next && rm -rf tina/__generated__",
     "changeset": "changeset",
     "version": "changeset version",
